@startuml diagram de class

class User {
    - **String id**
    - String name
    - String password
    
    Year: getYear(int year)
    Year: getLastYear() 
    Year: setYear(int year)
}

class Year {
    - **String id**
    - Int bank_report
    - Int cash_report
}

class CashItem {
    - **String id**
    - **String year_id**
    - String label
    - Int debit
    - Int credit

}

class BankItem {
    - **String id**
    - **String year_id**
    - string label
    - String type
    - Int debit
    - Int credit
    - Bool checked    
}

User "1" *-- "0..*" Year
Year "1" *-- "0..*" BankItem
Year "1" *-- "0..*" CashItem

@enduml